@@ -1,3 +1,8 @@
+2008-01-04 18:38-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormViewWindow.m: Try to get the editor for the 
+	standalone view and activate it.
+
 2008-01-04 13:22-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* English.lproj/Gorm.gorm: Changed delete to require command,
